Revise README for MiniRelDB project overview
Updated README to reflect project evolution, architecture, and current capabilities.